--- a/docs/specs/source_3_typed_bnf.tex
+++ b/docs/specs/source_3_typed_bnf.tex
@@ -17,8 +17,8 @@
 &&                       && |   &\quad && \textbf{\texttt{function}}\  \textit{name} \ 
                                                     \textbf{\texttt{(}}\  \textit{rest-names} \ \textbf{\texttt{)}}[\texttt{:}\ \textit{type}]\ \textit{block} \quad
                                                             && \textrm{\href{https://sourceacademy.org/sicpjs/1.1.4\#p4}{function declaration}}\\
-&&                       && |   &\quad && \textbf{\texttt{type}}\  \textit{name} \ 
-                                                           \textbf{\texttt{=}}\  \textit{type} \ \textbf{\texttt{;}} && \textrm{type alias declaration}\\
+&&                       && |   &\quad && \textbf{\texttt{type}}\  \textit{name}[<\textit{name}\ (\ \textbf{\texttt{,}} \ \textit{name}\ ) ...>] \ 
+                                                           \textbf{\texttt{=}}\  \textit{alias-type} \textbf{\texttt{;}} && \textrm{type alias declaration}\\
 &&                       && |   &\quad && \textbf{\texttt{return}}\  \textit{expression} \ \textbf{\texttt{;}}
                                                            && \textrm{\href{https://sourceacademy.org/sicpjs/1.1.4\#p4}{return statement}}\\
 &&                       && |   &\quad && \textit{if-statement} \quad
@@ -140,10 +140,20 @@
 && \textit{type}         && ::= &\quad &&  \texttt{number}\ |\ \texttt{boolean}\ |\ \texttt{string} \\
 &&                       &&     &      &&  |\ \texttt{undefined}\ |\ \texttt{null}\ |\ \texttt{void}\ |\ \texttt{any}\ && \textrm{basic type}\\
 &&                       && |   &\quad &&  \textit{number}\ |\ \textit{string}\ |\ \textbf{\texttt{true}}\ |\ \textbf{\texttt{false}} && \textrm{literal type}\\
-&&                       && |   &\quad &&  \textit{name}   && \textrm{type reference}\\
+&&                       && |   &\quad &&  \textit{name}[<\textit{type}\ (\ \textbf{\texttt{,}} \ \textit{type}\ ) ...>]   && \textrm{type reference}\\
 &&                       && |   &\quad &&   (\ \textit{names}\ )\ \texttt{\textbf{=>}}\ \textit{type} && \textrm{function type}\\
 &&                       && |   &\quad &&   \textit{type}\ \texttt{\textbf{|}}\ \textit{type} && \textrm{union type}\\
 &&                       && |   &\quad &&   \textit{Pair<type, type>} && \textrm{pair type}\\
 &&                       && |   &\quad &&   \textit{List<type>} && \textrm{list type}\\
 &&                       && |   &\quad &&   \textit{type[]} && \textrm{array type}\\
+&& \textit{alias-type}         && ::= &\quad &&  \texttt{number}\ |\ \texttt{boolean}\ |\ \texttt{string} \\
+&&                       &&     &      &&  |\ \texttt{undefined}\ |\ \texttt{null}\ |\ \texttt{void}\ |\ \texttt{any}\ && \textrm{basic type}\\
+&&                       && |   &\quad &&  \textit{number}\ |\ \textit{string}\ |\ \textbf{\texttt{true}}\ |\ \textbf{\texttt{false}} && \textrm{literal type}\\
+&&                       && |   &\quad &&  \textit{name}[<\textit{alias-type}\ (\ \textbf{\texttt{,}} \ \textit{alias-type}\ ) ...>]   && \textrm{type reference}\\
+&&                       && |   &\quad &&   (\ \textit{names}\ )\ \texttt{\textbf{=>}}\ \textit{alias-type} && \textrm{function type}\\
+&&                       && |   &\quad &&   \textit{alias-type}\ \texttt{\textbf{|}}\ \textit{alias-type} && \textrm{union type}\\
+&&                       && |   &\quad &&   \textit{Pair<alias-type, alias-type>} && \textrm{pair type}\\
+&&                       && |   &\quad &&   \textit{List<alias-type>} && \textrm{list type}\\
+&&                       && |   &\quad &&   \textit{alias-type[]} && \textrm{array type}\\
+&&                       && |   &\quad &&  \textit{name}   && \textrm{type parameter}\\
 \end{alignat*}
