Add source 4 typed specs

--- a/docs/specs/source_4_typed.tex
+++ b/docs/specs/source_4_typed.tex
@@ -2,12 +2,12 @@
 
 \begin{document}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\docheader{2023}{Source}{\S 3 Typed}{Martin Henz, Jingjing Zhao}
+	\docheader{2023}{Source}{\S 4 Typed}{Martin Henz, Jingjing Zhao}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input source_intro.tex
 
-Source \S 3 Typed is a variant of Source \S 3 that introduces type syntax and type checking.
+Source \S 4 Typed is a variant of Source \S 4 that introduces type syntax and type checking.
 
 \input source_bnf.tex
 
@@ -31,7 +31,7 @@ Source \S 3 Typed is a variant of Source \S 3 that introduces type syntax and ty
 
 \input source_comments
 
-\input source_3_typed_typing.tex
+\input source_4_typed_typing.tex
 
 \input source_typing_3
 
@@ -51,6 +51,8 @@ The following libraries are always available in this language.
 
 \input source_streams
 
+\input source_interpreter
+
 \input source_js_differences
 
 \newpage
@@ -61,4 +63,8 @@ The following libraries are always available in this language.
 
 \input source_stream_library
 
-\end{document}
+\newpage
+
+\input source_parse_tree_types.tex
+
+    \end{document}
