Add partial tests to source 4 typed

--- a/docs/specs/source_4_typed_typing.tex
+++ b/docs/specs/source_4_typed_typing.tex
@@ -167,7 +167,7 @@ $\Gamma_{-1}$
 & $[$ & \texttt{array\_length} & $\leftarrow$  & $\Any$[] & $\rightarrow$ & $\Number$ & $]$ \\
 & $[$ & \texttt{apply\_in\_underlying\_javascript} & $\leftarrow$ & $(\Any,$ \textit{List<} $\Any$ \textit{>}$)$ & $\rightarrow$ & $\Any$ & $]$ \\
 & $[$ & \texttt{tokenize} & $\leftarrow$  & $\String$ & $\rightarrow$ & \textit{List<} $\String$ \textit{>} & $]$ \\
-& $[$ & \texttt{parse} & $\leftarrow$  & $\String$ & $\rightarrow$ & \textit{Program} & $]$ $\Gamma_0$ \\
+& $[$ & \texttt{parse} & $\leftarrow$  & $\String$ & $\rightarrow$ & \textit{Program}\ |\ \textit{Statement} & $]$ $\Gamma_0$ \\
 & \end{tabular}
 
 For details on the types used by the parse function, refer to the appendix on parse tree types.
