--- a/docs/specs/source_parse_tree_types.tex
+++ b/docs/specs/source_parse_tree_types.tex
@@ -2,4 +2,4 @@
 
 The types for the result of the parse function are as follows:
 
-\input ../lib/parsetreetypes.ts
+\input ../lib/parsetreetypes.js
