--- a/docs/specs/source_3_typed_bnf.tex
+++ b/docs/specs/source_3_typed_bnf.tex
@@ -46,6 +46,9 @@
 && \textit{names}   && ::= &\quad &&  \epsilon\ | \  \textit{name}[\texttt{:}\ \textit{type}] \ 
                                                    (\ \textbf{\texttt{,}} \ \textit{name}[\texttt{:}\ \textit{type}]\ ) ...
                                                             && \textrm{\href{https://sourceacademy.org/sicpjs/1.1.4\#p4}{name list}}   \\[1mm]
+&& \textit{typed-names}   && ::= &\quad &&  \epsilon\ | \  \textit{name}\texttt{:}\ \textit{type} \ 
+                                                   (\ \textbf{\texttt{,}} \ \textit{name}\texttt{:}\ \textit{type}\ ) ...
+                                                            && \textrm{\href{https://sourceacademy.org/sicpjs/1.1.4\#p4}{name list (typed)}}   \\[1mm]
 && \textit{rest-names}   && ::= &\quad &&  \epsilon\ | \  \texttt{...} \textit{name} \ |  \ \textit{names}\ [\texttt{, ...}\textit{name}]
                                                             && \textrm{\href{https://sourceacademy.org/sicpjs/1.1.4\#p4}{name list} (\href{https://sourceacademy.org/sicpjs/3.4.2\#p17}{rest})} \\[1mm]
 && \textit{if-statement} && ::= &\quad &&  \textbf{\texttt{if}}\
@@ -56,11 +59,11 @@
                                           \ | \
                                           \textit{\href{https://sourceacademy.org/sicpjs/1.3.3\#footnote-1}{if-statement}} \ )\ ]
                                                             && \textrm{\href{https://sourceacademy.org/sicpjs/1.3.2\#p12}{conditional statement}} \\[1mm]
-&& \textit{block}        && ::= &      && \textbf{\texttt{\{}}\  \textit{statement} ... \ \textbf{\texttt{\}}} \quad
-                                                           && \textrm{\href{https://sourceacademy.org/sicpjs/1.1.8\#p14}{block statement}} \\[1mm]
 \end{alignat*}
 
 \begin{alignat*}{9}
+&& \textit{block}        && ::= &      && \textbf{\texttt{\{}}\  \textit{statement} ... \ \textbf{\texttt{\}}} \quad
+                                                           && \textrm{\href{https://sourceacademy.org/sicpjs/1.1.8\#p14}{block statement}} \\[1mm]
 && \textit{let}          && ::= &\quad &&  \textbf{\texttt{let}}\  \textit{name}[\texttt{:}\ \textit{type}] \ 
                                            \textbf{\texttt{=}}\  \textit{expression} 
                                                             && \textrm{\href{https://sourceacademy.org/sicpjs/3.1.1\#p3}{variable declaration}} \\[1mm]
@@ -141,7 +144,7 @@
 &&                       &&     &      &&  |\ \texttt{undefined}\ |\ \texttt{null}\ |\ \texttt{void}\ |\ \texttt{any}\ && \textrm{basic type}\\
 &&                       && |   &\quad &&  \textit{number}\ |\ \textit{string}\ |\ \textbf{\texttt{true}}\ |\ \textbf{\texttt{false}} && \textrm{literal type}\\
 &&                       && |   &\quad &&  \textit{name}[<\textit{type}\ (\ \textbf{\texttt{,}} \ \textit{type}\ ) ...>]   && \textrm{type reference}\\
-&&                       && |   &\quad &&   (\ \textit{names}\ )\ \texttt{\textbf{=>}}\ \textit{type} && \textrm{function type}\\
+&&                       && |   &\quad &&   (\ \textit{typed-names}\ )\ \texttt{\textbf{=>}}\ \textit{type} && \textrm{function type}\\
 &&                       && |   &\quad &&   \textit{type}\ \texttt{\textbf{|}}\ \textit{type} && \textrm{union type}\\
 &&                       && |   &\quad &&   \textit{Pair<type, type>} && \textrm{pair type}\\
 &&                       && |   &\quad &&   \textit{List<type>} && \textrm{list type}\\
@@ -150,7 +153,7 @@
 &&                       &&     &      &&  |\ \texttt{undefined}\ |\ \texttt{null}\ |\ \texttt{void}\ |\ \texttt{any}\ && \textrm{basic type}\\
 &&                       && |   &\quad &&  \textit{number}\ |\ \textit{string}\ |\ \textbf{\texttt{true}}\ |\ \textbf{\texttt{false}} && \textrm{literal type}\\
 &&                       && |   &\quad &&  \textit{name}[<\textit{alias-type}\ (\ \textbf{\texttt{,}} \ \textit{alias-type}\ ) ...>]   && \textrm{type reference}\\
-&&                       && |   &\quad &&   (\ \textit{names}\ )\ \texttt{\textbf{=>}}\ \textit{alias-type} && \textrm{function type}\\
+&&                       && |   &\quad &&   (\ \textit{typed-names}\ )\ \texttt{\textbf{=>}}\ \textit{alias-type} && \textrm{function type}\\
 &&                       && |   &\quad &&   \textit{alias-type}\ \texttt{\textbf{|}}\ \textit{alias-type} && \textrm{union type}\\
 &&                       && |   &\quad &&   \textit{Pair<alias-type, alias-type>} && \textrm{pair type}\\
 &&                       && |   &\quad &&   \textit{List<alias-type>} && \textrm{list type}\\
